--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">ShopList</string>
     <string name="add_new_shop_item">Add new shop item</string>
+    <string name="name">Name:</string>
+    <string name="amount">Amount:</string>
+    <string name="save">Save</string>
 </resources>
