--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="name">Name:</string>
     <string name="amount">Amount:</string>
     <string name="save">Save</string>
+    <string name="enter_item_name">Enter item name</string>
+    <string name="enter_amount_more_than_zero">Enter amount more than zero</string>
 </resources>
